// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DND - PKG: Base Testing child Threshold Calculates threshold Offset 1`] = `
Object {
  "horizontal": 134,
  "vertical": Object {
    "third": 40,
    "twoThirds": 80,
  },
}
`;

exports[`DND - PKG: Base Testing child Threshold Calculates thresholds for dragged as dropped 1`] = `
Object {
  "maxBottom": 450,
  "maxLeft": 466,
  "maxRight": 734,
  "maxTop": 290,
}
`;

exports[`DND - PKG: Base Testing child Threshold Calculates thresholds for parent as dropped 1`] = `
Object {
  "id-2": Object {
    "maxBottom": 450,
    "maxLeft": 466,
    "maxRight": 734,
    "maxTop": 290,
  },
}
`;
